--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -27,6 +27,10 @@ jobs:
         java-version: '17'
         distribution: 'temurin'
         cache: maven
+      
+    - name: Run tests with Maven
+      run: mvn test
+      
     - name: Build with Maven
       run: mvn -B package --file pom.xml
 
