--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -14,6 +14,9 @@ on:
   pull_request:
     branches: [ "main" ]
 
+  # Allow you to run this workflow manually from de Actions tab
+  workflow_dispatch:
+
 jobs:
   build:
 
