--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -13,9 +13,7 @@ on:
     branches: [ "main" ]
   pull_request:
     branches: [ "main" ]
-
-  # Allow you to run this workflow manually from de Actions tab
-  workflow_dispatch:
+  workflow_dispatch: #Allow you to run this workflow manually from de Actions tab
 
 jobs:
   build:
